--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-mongostore": "^0.1.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.12.1",
     "mongoose": "^6.6.4"
   },
   "devDependencies": {
