--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "connect-mongodb-session": "^3.1.1",
     "connect-mongostore": "^0.1.4",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "lodash": "^4.17.21",
     "mongodb": "^4.12.1",
-    "mongoose": "^6.6.4"
+    "mongoose": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
